alignment fix working on 5

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -469,6 +469,10 @@ Landing Main
   	padding: 12% 0;
  		width: 100%;
   }
+	
+	.homepage-flex-box-container {
+		margin: 0;
+	}
 
 	.mobile-hr-display {
 		display: block;
